--- a/index.html
+++ b/index.html
@@ -71,8 +71,6 @@
                             </li>
                             <li>Constructed marketing and business development material to promote cloud transformation software and other consulting services for CIO Advisory, which were used to sell to several multi-million-dollar client accounts.
                             </li>
-                            <li>Constructed marketing and business development material to promote cloud transformation software and other consulting services for CIO Advisory, which were used to sell to several multi-million-dollar client accounts.
-                            </li>
                             <li>Extensively analyzed a financial institution's multi-cloud infrastructure for quick-win cost optimization opportunities while leveraging Alteryx, leading to identification of cost inefficiencies the client was not aware of and a cost savings roadmap with opportunities netting up to 30%.
                             </li>
                         </ul>
@@ -132,7 +130,6 @@
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">2018</span></div>
                 </div>
-
             </div>
         </section>
         <hr class="m-0" />
@@ -142,20 +139,32 @@
                 <h2 class="mb-5">Certifications</h2>
                 <ul>
                     <li>
-                        Alteryx Designer Advanced Certified (July 2021)
+                    Alteryx Designer Advanced Certified (July 2021)
+                    <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/Alteryx-Advanced-cert.png" width="200" height="200" alt="..." /></span>
                     </li>
                     <li>
-                    AWS Solutions Architect Associate (March 2020)                    </li>
+                    AWS Solutions Architect Associate (March 2020)  
+                    <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/AWS-SolArchitect-Associate-2020.png" width="200" height="200" alt="..." /></span>                  
+                </li>
                     <li>
-                    Microsoft Azure Fundamentals AZ-900 (February 2020)                    </li>
-                    
+                    Microsoft Azure Fundamentals AZ-900 (February 2020)  
+                    <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/azure-fundamentals.png" width="200" height="200" alt="..." /></span>                                    
+                </li>
+                    <li>
+                    Additional Certifications  
+                    <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/AWS-CloudPractitioner-2020.png" width="100" height="100" alt="..." /><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/Alteryx-designer-core.png" width="100" height="100" alt="..." /></span>                                    
+                </li>
                 </ul>
             </div>
         </section>
     </div>
+
+
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
+    <script src="js/github-widget.min.js"></script>
+
 </body>
 </html>
