--- a/index.html
+++ b/index.html
@@ -140,19 +140,19 @@
                 <ul>
                     <li>
                     Alteryx Designer Advanced Certified (July 2021)
-                    <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/Alteryx-Advanced-cert.png" width="200" height="200" alt="..." /></span>
+                    <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/Alteryx-Advanced-cert.png" width="30%" height="30%" alt="..." /></span>
                     </li>
                     <li>
                     AWS Solutions Architect Associate (March 2020)  
-                    <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/AWS-SolArchitect-Associate-2020.png" width="200" height="200" alt="..." /></span>                  
+                    <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/AWS-SolArchitect-Associate-2020.png" width="30%" height="30%" alt="..." /></span>                  
                 </li>
                     <li>
                     Microsoft Azure Fundamentals AZ-900 (February 2020)  
-                    <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/azure-fundamentals.png" width="200" height="200" alt="..." /></span>                                    
+                    <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/azure-fundamentals.png" width="30%" height="30%" alt="..." /></span>                                    
                 </li>
                     <li>
                     Additional Certifications  
-                    <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/AWS-CloudPractitioner-2020.png" width="100" height="100" alt="..." /><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/Alteryx-designer-core.png" width="100" height="100" alt="..." /></span>                                    
+                    <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/AWS-CloudPractitioner-2020.png" width="10%" height="10%" alt="..." /><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/Alteryx-designer-core.png" width="10%" height="10%" alt="..." /></span>                                    
                 </li>
                 </ul>
             </div>
