--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                         <ul>
                             <li> Led a successful release of KPMG's cloud transformation impact and disposition modeler solution by leading a geographically diverse team of three engineers, resulting in stakeholder buy-in for additional features and 100% timely completion of all story board tasks.
                             </li>
-                            <li> Authored a cloud cost benchmarking methodology for comparing services on AWS, Azure, and GCP, which then sold and successfully implemented for approximately $600k to a social media service company.
+                            <li>Negotiated with product sponsors on which features and stories to include in upcoming product releases, persuading leadership to focus investments on feature updates with the highest marginal utility for the user experience.
                             </li>
-                            <li>Negotiated with product sponsors on which features and stories to include in upcoming agile sprints, persuading leadership to focus investments on feature updates with the highest marginal utility for the user experience.
+                            <li> Authored a cloud cost benchmarking methodology for comparing services on AWS, Azure, and GCP, which then sold and successfully implemented for approximately $600k to a social media service company.
                             </li>
                             <li>Designed dashboards and UIs using Alteryx Designer, Python, and Power BI as front ends for self-service versions of cloud transformation software, generating a 95% decrease in engineering staff engaging on client projects related to that software.
                             </li>
