--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
                 <div class="subheading mb-5">
                     <a href="mailto:roman.azabaleta@gmail.com">roman.azabaleta@gmail.com</a>            
                 </div>
-                <p class="lead mb-5">Cloud consultant and technical product manager focused on cloud strategy solutions including migration planning, benchmarking, cost optimization and rearchitecture.</p>
+                <p class="lead mb-5">Management consultant for cloud transformation offerings and product manager for KPMG's cloud transformation accelerators/tools.
+</p>
+<p class="lead mb-5">Sold and delivered the following projects to Fortune 500 companies: AWS/Azure cost optimization, AWS/Azure/GCP benchmarking, Cloud business case, Cloud migration planning, Private cloud business case, IT operating model, Application rationalization, and IT integration.</p>
+<p class="lead mb-5">Worked with companies in the following industries: Financial Services and Banking, Internet and Social Media, Healthcare, and Software</p>
                 <div class="social-icons">
                     <a class="social-icon" href="https://www.linkedin.com/in/roman-zabaleta/"><i class="fab fa-linkedin-in"></i></a>
                     <a class="social-icon" href="https://github.com/romanzabaleta"><i class="fab fa-github"></i></a>
